# rust-tg-botapi

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: color.rs  echo.rs  multi.rs
src/: api.json  args.in.rs  args.rs  better.rs  builders.rs  form_ser.rs  functions.rs  functions_impl.rs  helpers.rs  inline_query.rs  lib.rs  method_return_types.in.rs  methods.rs  methods_impl.rs  objects.rs  objects_impl.rs  tg_rs.py  types.in.rs  types.rs  types_impl.rs
