[package]
authors = ["Hasan <hasantiny@gmail.com>"]
description = "Telegram Bot Api library"
keywords = ["async", "telegram", "bot", "api"]
license = "MIT"
name = "tg_botapi"
readme = "README.md"
repository = "https://github.com/JuanPotato/rust-tg-botapi"
version = "0.6.0"
edition = "2018"


[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.5", features = ["macros"] }
futures = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
