[package]
authors = ["Hasan <hasan@juanpota.to>"]
description = "Telegram Bot Api library"
keywords = ["async", "telegram", "bot", "api"]
license = "MIT"
name = "tg_botapi"
readme = "README.md"
repository = "https://github.com/JuanPotato/rust-tg-botapi"
version = "0.9.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
